index.html update

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ html,body { margin:0; padding:0; height:100%; width:100%; overflow: hidden;}
 function setupEditor()
 {
   window.editor = ace.edit("editor");
-  editor.setTheme("ace/theme/chaos");
+  editor.setTheme("ace/theme/cobalt");
   editor.getSession().setMode("ace/mode/html");
   editor.setValue(`<!DOCTYPE html>
 <html>
